# my-tls

./: Cargo.toml
.github/workflows/: windows-build.yml
src/: cacert-2023-08-22.pem  cert_content.rs  cert_info.rs  certs_iterator.rs  client_certificate.rs  create_tls_client_config.rs  crl.rs  install_default_crypto_providers.rs  lib.rs  self_signed_cert.rs  ssl.rs
