[package]
name = "my-tls"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
self-signed-certificate = ["rustls-pki-types", "rcgen", "rustls-pemfile"]

[dependencies]
tokio-rustls = { version = "0.26.*" }
tokio = { version = "*", features = ["fs"] }
lazy_static = "*"
openssl = { version = "*" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
pem = "*"
rustls-pki-types = { version = "*", optional = true }
rcgen = { version = "*", optional = true }
rustls-pemfile = { version = "*", optional = true }
