[package]
name = "my-tls"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []


[dependencies]
tokio-rustls = { version = "0.26.*", features = ["ring"] }
tokio = { version = "*", features = ["fs"] }
lazy_static = "*"
openssl = { version = "*" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
pem = "*"
rustls-pki-types = { version = "*" }
rcgen = { version = "*" }
rustls-pemfile = { version = "*" }
x509-parser = { version = "*" }
